fixed nigh mode color and adding js for refresh page in dark mode

--- a/style.css
+++ b/style.css
@@ -203,10 +203,14 @@ header.scrolled .header-content{
     color: var(--section-bg);
     font-style: italic;
     padding: 0 1rem;
+    background-color: var(--build-bg);
+    color: var(--build-text);
+
 }
 
 .make {
-    color: var(--nav-hover);
+    
+    color: var(--text-color);
     font-size: 2rem;
     font-weight: 600;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
